// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker should render with maximum props defined 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="Test"
    tabIndex={0}
    type="text"
    value=""
  />
</div>
`;

exports[`DatePicker should render with minimum props defined 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onClick={[Function]}
  onFocus={[Function]}
  tabIndex={-1}
>
  <div
    className="container uui-icon uui-enabled"
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
  <input
    className="uui-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    placeholder="MMM D, YYYY"
    tabIndex={0}
    type="text"
    value=""
  />
</div>
`;
